# BambooBrain

./: .gitignore  CMakeLists.txt  README.md  datasets_tools.py  hyperopt_tools.py
datasets/: BIN_test.txt  BIN_train.txt  LETTER_test.txt  LETTER_train.txt  MNIST_test.txt  MNIST_train.txt  PENDIGITS_test.txt  PENDIGITS_train.txt  bin.bb  fashion.bb
playground/: CMakeLists.txt  test1.c
src/: ApplyConfig.c  ApplyConfig.h  Bagging.c  Bagging.h  ComputeSplit.c  ComputeSplit.h  Config.h  CreateModel.h  CreateTree.h  Dataset.c  Dataset.h  DecisionTree.c  DecisionTree.h  DecisionTreeTools.c  DecisionTreeTools.h  Dynamic.c  Dynamic.h  Hyperopt.c  Hyperopt.h  Impurity.c  Impurity.h  Model.h  ModelTools.c  ModelTools.h  PreProcessInstance.c  PreProcessInstance.h  PreProcessing.c  PreProcessing.h  PredictFromModel.c  PredictFromModel.h  PredictFromTree.c  PredictFromTree.h  Predictions.c  Predictions.h  Progress.c  Progress.h  RandomForest.c  RandomForest.h  Settings.h  Split.c  (+11 more)
src/dynamic/: Bagging.c  Bagging.h  ComputeSplit.c  ComputeSplit.h  CreateModel.c  CreateModel.h  CreateTree.c  CreateTree.h  Impurity.c  Impurity.h  PreProcessInstance.c  PreProcessInstance.h  PredictFromModel.c  PredictFromModel.h  PredictFromTree.c  PredictFromTree.h  Threshold.c  Threshold.h
